fix the bug of text overlapping on download link (#311)
* fix the bug of text overlapping on download link

* addressing CR

* make the page not jump up and down when toggle the download button

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,7 +61,7 @@ h2 small
   display: block
 
 #download-menu
-  display: none
+  visibility: hidden  
   float: left
   margin: 0
   white-space: nowrap
